--- a/LifeCounter/appsettings.json
+++ b/LifeCounter/appsettings.json
@@ -8,6 +8,6 @@
   "AllowedHosts": "*",
 
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost; User=root; Password=12345; port=3307; Database=LifeCounter"
+    "DefaultConnection": "Server=localhost; User=root; Password=12345; port=3307; Database=LifeCounterAPI"
   }
 }
